--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,67 @@
-anaconda==0.0.1.1
-argon2-cffi==21.1.0
-attrs==21.2.0
-backcall==0.2.0
-bleach==4.1.0
-cffi==1.14.6
-colorama==0.4.4
-cycler==0.10.0
-debugpy==1.4.3
-decorator==5.1.0
-defusedxml==0.7.1
-entrypoints==0.3
-ipykernel==6.4.1
-ipython==7.28.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.18.0
-Jinja2==3.0.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==7.0.4
-jupyter-console==6.4.0
-jupyter-core==4.8.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-kiwisolver==1.3.2
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.3
-mistune==0.8.4
-nbclient==0.5.4
-nbconvert==6.2.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.4
-numpy==1.21.2
-packaging==21.0
-pandas==1.3.3
-pandocfilters==1.5.0
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==8.3.2
-pip==20.1.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-pycparser==2.20
-Pygments==2.10.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.1
-pyzmq==22.3.0
-qtconsole==5.1.1
-QtPy==1.11.2
-Send2Trash==1.8.0
-setuptools==47.1.0
-six==1.16.0
-terminado==0.12.1
-testpath==0.5.0
-tornado==6.1
-traitlets==5.1.0
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
+anaconda
+argon2-cffi
+attrs
+backcall
+bleach
+cffi
+colorama
+cycler
+debugpy
+decorator
+defusedxml
+entrypoints
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+jedi
+Jinja2
+jsonschema
+jupyter
+jupyter-client
+jupyter-console
+jupyter-core
+jupyterlab-pygments
+jupyterlab-widgets
+kiwisolver
+MarkupSafe
+matplotlib
+matplotlib-inline
+mistune
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+notebook
+numpy
+Package
+packaging
+pandas
+pandocfilters
+parso
+pickleshare
+Pillow
+pip
+prometheus-client
+prompt-toolkit
+pycparser
+Pygments
+pyparsing
+pyrsistent
+python-dateutil
+pytz
+pywin32
+pywinpty
+pyzmq
+qtconsole
+QtPy
+Send2Trash
+setuptools
+six
+terminado
+testpath
+tornado
+traitlets
+wcwidth
+webencodings
+widgetsnbextension
