--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ jupyter-core==4.8.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
 kiwisolver==1.3.2
+lxml==4.6.3
 MarkupSafe==2.0.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
@@ -38,22 +39,23 @@ packaging==21.0
 pandas==1.3.3
 pandocfilters==1.5.0
 parso==0.8.2
+pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.3.2
-pip==20.1.1
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
+ptyprocess==0.7.0
 pycparser==2.20
 Pygments==2.10.0
 pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.1
+PyYAML==5.4.1
 pyzmq==22.3.0
 qtconsole==5.1.1
 QtPy==1.11.2
 Send2Trash==1.8.0
-setuptools==47.1.0
 six==1.16.0
 terminado==0.12.1
 testpath==0.5.0
@@ -62,4 +64,3 @@ traitlets==5.1.0
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
-
